- MB_window wrapped in wrapper div tag #MB_windowwrapper set to position:absolute to take MB out of document flow, and MB_window is now position:relative and left and right margins set to auto to ensure horizontal spacing
- Dynamic width resizing while retaining horizontal centering now supported due to above change

- Modalbox._setPosition() removed since it is no longer necessary

- Modalbox.resizeToContent() now supports an option called "resizeCSSID" which will calculate the byWidth paramater to send to Modalbox.resize() based on the width of this CSS ID. In other words, resizeToContent now supports expanding the width of the MB window based on the width of a particular CSS ID.

- MB windows no longer grow to be longer than the browser's viewport height minus an arbitrary offset to ensure that the window does not butt up against the bottom of the browser window

--- a/modalbox.css
+++ b/modalbox.css
@@ -1,24 +1,31 @@
 #MB_overlay {
 	position: absolute;
 	margin: auto;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	top: 0;	left: 0;
+	width: 100%; height: 100%;
 	z-index: 9999;
 	border: 0;
-	background-color: #000 !important;
+	background-color: #000!important;
 }
 #MB_overlay[id] { position: fixed; }
 
+#MB_windowwrapper {
+	position:absolute;
+	top:0;
+	width:100%;
+}
+
 #MB_window {
-	position: absolute;
-	top: 0;
+	position:relative !important;
+	margin-left:auto !important;
+	margin-right:auto !important;
+	top:0 !important;
+	left:0 !important;
 	border: 0 solid;
 	text-align: left;
 	z-index: 10000;
 }
-#MB_window[id] { position: fixed !important; }
+#MB_window[id] { position: relative!important; }
 
 #MB_frame {
 	position: relative;
@@ -48,8 +55,7 @@
 #MB_close {
 	display: block;
 	position: absolute;
-	right: 5px;
-	top: 4px;
+	right: 5px; top: 4px;
 	padding: 2px 3px;
 	font-weight: bold;
 	text-decoration: none;
@@ -69,35 +75,33 @@
 #MB_window {
 	background-color: #EFEFEF;
 	color: #000;
-
+	
 	-webkit-box-shadow: 0 0 64px #000; 
 	-moz-box-shadow: #000 0 0 64px; 
 	box-shadow: 0 0 64px #000;
 }
+	#MB_frame {
+		padding-bottom: 4px;
+		
+		-webkit-border-bottom-left-radius: 4px;
+		-webkit-border-bottom-right-radius: 4px;
 
-#MB_frame {
-	padding-bottom: 4px;
+		-moz-border-radius-bottomleft: 4px;
+		-moz-border-radius-bottomright: 4px;
 
-	-webkit-border-bottom-left-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
+		border-bottom-left-radius: 4px;
+		border-bottom-right-radius: 4px;
+	}
+	
+	#MB_content { border-top: 1px solid #F9F9F9; }
 
-	-moz-border-radius-bottomleft: 4px;
-	-moz-border-radius-bottomright: 4px;
-
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
-}
-
-#MB_content { border-top: 1px solid #F9F9F9; }
-
-#MB_header {
-	background-color: #DDD;
-	border-bottom: 1px solid #CCC;
-}
-
-#MB_caption { color: #000 }
-#MB_close { color: #777 }
-#MB_close:hover { color: #000 }
+	#MB_header {
+	  background-color: #DDD;
+	  border-bottom: 1px solid #CCC;
+	}
+		#MB_caption { color: #000 }
+		#MB_close { color: #777 }
+		#MB_close:hover { color: #000 }
 
 
 /* Alert message */
